//copyright 2013 Computer Science Department, Recursive InterNetworking Architecture (RINA) laboratory, Boston University.
//All rights reserved. Permission to use, copy, modify, and distribute this software and its documentation for any purpose 
//and without fee is hereby granted, provided that the above copyright notice appear in all copies and that both the 
//copyright notice and this permission notice appear in supporting documentation. The RINA laboratory of the Computer 
//Science Department at Boston University makes no representations about the suitability of this software for any purpose.
//It is provided "as is" without express or implied warranty.

import "ApplicationProcessNamingInfoMessage.proto";

message directoryForwardingTableEntrySet_t{   //carries information about directoryforwardingtable entries
    repeated directoryForwardingTableEntry_t directoryForwardingTableEntry= 1;
}

message directoryForwardingTableEntry_t{ //information about a directoryforwardingtable entry
    required rina.object.gpb.applicationProcessNamingInfo_t applicationName = 1;
    required uint64 ipcProcessAddress = 2;
    optional uint64 timestamp  = 3;
}

